Styles fix (z-index)

--- a/src/apps/recordings/style/app.scss
+++ b/src/apps/recordings/style/app.scss
@@ -464,6 +464,10 @@
 		height: 29px;
 		padding: 0 6px;
 	}
+
+	.ui-slider .ui-slider-handle {
+		z-index: 1;
+	}
 }
 
 
